3dt 0.5.1:

2009-12-07: Delaney symbol files with the .tgs extension are now recognized.

3dt 0.5.0:

2009-09-11: Added an option for using primitive unit cells.
2009-01-28: New export option for Wavefront/OBJ, including materials.
2008-12-05: Hiding and recoloring facet classes now extends to facet outlines.
2008-12-02: Re-established the U3D export item in the file menu.
2008-11-17: The user can now specify a vector to point upward on the screen.
2008-11-13: Tilings carrying nets in RCSR or the zeolite atlas are identified.
2008-11-13: The space group lookup table is automatically loaded at startup.
2008-11-13: Added a third light and a dialog for setting light properties.
2008-11-12: The MacOS context menu workaround is now obsolete and was removed.
2008-11-11: Made 3dt independent of jReality's ViewerApp class.

3dt 0.4.0:

- The software viewer is used automatically if OpenGL is not available.
- BUG FIX: no more corrupted scenes when reading back '.gsl' files.
- The random recoloring of tile classes is now 'more random'.
- Removed the 'fullscreen' and 'maximal size' menu entries.
- The search (<ctrl>-f) action now uses regular expressions.
- Simple tiling properties are now displayed first before rendering the tiling.
- The 'Dualize' and 'Max. Symmetry' actions now refuse to produce duplicates.
- Unnamed tilings now receive default names of the form '#<n>'.
- An arbitrary viewing direction can now be specified via a dialog box.
- Users can now set the step size for rotations via the arrow keys.
- Changed the maximum level of surface detail to 4 (previously 3).

- The color pickers in the option dialogs no longer ignore the current colors.
- In "Open" and "Save" actions, full file names are now remembered.
- If no creasing is applied, edges now have constant width.
- Some basic info on each tiling is now saved in .ds files.
- I/O paths and other interface attributes are no longer stored in scene files.